
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
void
inverse(unsigned char *io, unsigned long len)
{
 unsigned long i;
 unsigned char c;

 for (i = 0; i < len/2; i++) {
  c = io[len-i-1];
  io[len-i-1] = io[i];
  io[i] = c;
 }
}
